fix(sidebar): avoid whitespace: pre by wrapping highlighted text

--- a/client/src/document/organisms/sidebar/index.scss
+++ b/client/src/document/organisms/sidebar/index.scss
@@ -31,7 +31,6 @@
     display: inline-flex;
     hyphens: auto;
     padding: 0.25rem;
-    white-space: pre;
 
     &:hover,
     &:focus {
